--- a/advanced/03-deployment.yaml
+++ b/advanced/03-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: jenkins
-          image: jenkins/jenkins:lts
+          image: jenkins/jenkins:2.263.4-lts
           imagePullPolicy: Always
           resources:
             limits:
